[package]
name = "gmopg-rs-example1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gmopg-rs = { path = "../lib" }

tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.7", features = [
  "registry",
  "env-filter",
  "json",
] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.2", features = ["derive", "env"] }
url = "2"