[package]
name = "gmopg-rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bit3xtechnologies/gmopg-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_repr = "0.1"
regex = "1.8"

http = "0.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.7", features = [
  "registry",
  "env-filter",
  "json",
] }
snafu = { version = "0.7", default-features = false, features = ["std", "futures"] }